--- a/issues/1066/meta.yaml
+++ b/issues/1066/meta.yaml
@@ -1,3 +1,3 @@
 id: 1066
-publication_date: 2014-12-15
-cutoff_date: 2014-12-01
+publication_date: 2014-12-15T00:00:00.000Z
+cutoff_date: 2014-12-01T00:00:00.000Z
