--- a/issues/991/annexes.yaml
+++ b/issues/991/annexes.yaml
@@ -1,4 +1,4 @@
 E164_CC:
-  position_on: 2011-11-01
+  position_on: 2011-11-01T00:00:00.000Z
 CB_ALT:
-  position_on: 2011-11-01
+  position_on: 2011-11-01T00:00:00.000Z
